# housing-mlops

./: .env.local  LICENSE  Makefile  README.md  pyproject.toml
app/: page.tsx
app/api/chatbot/process/: route.ts
app/api/scrape/products/: route.ts
app/api/subsidy/generate/: route.ts
app/components/chatbot/: ChatbotWidget.tsx
app/components/cooling/: CoolingMap.tsx
app/components/subsidy/: SubsidyForm.tsx
app/components/ui/: FeatureCard.tsx  Hero.tsx
app/types/: index.ts
klimaratownik/: PROJECT_OUTPUT.json  README.md  package-lock.json  package.json
