[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_price_prediction"
version = "0.0.1"
description = "End-to-end MLOps pipeline for Kaggle House Prices dataset."
authors = [
  { name = "Ivan Stankevich" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["housing_price_prediction"]
force_sort_within_sections = true


